# freetable

./: .gitignore  README.md  pyproject.toml
examples/: data.csv  output.csv  pyfixest_example.py  tables.tex
src/freetable/: __init__.py  adapter.py  config.py  table.py
tests/: __init__.py  test_adapter.py  test_config.py  test_pyfixest.py  test_table.py  test_tabularray.py  test_tabularx.py
